syntax = "proto3";
package payment;
option csharp_namespace = "Services.PaymentService";

service PaymentService {
  // Kiểm tra thẻ / token trước khi tạo order
  rpc CheckCard (CheckCardRequest) returns (CheckCardResponse);
}

message CheckCardRequest {
  string userId = 1;    // optional: id user
  string cardToken = 2; // token or masked card id (không truyền PAN raw)
  double amount = 3;    // amount to check limit against
}

message CheckCardResponse {
  bool valid = 1;            // thẻ hợp lệ (not expired, correct token)
  bool blocked = 2;          // thẻ bị khóa
  bool sufficientLimit = 3;  // đủ hạn mức cho giao dịch
  string message = 4;        // không chi tiết sensitive, chỉ mô tả ngắn
}