syntax = "proto3";

option csharp_namespace = "Services.InventoryService";

package inventory;

service InventoryService {
  // SYNC - Check stock nhanh cho Order Service
  rpc CheckStock (CheckStockRequest) returns (CheckStockResponse);
}

message CheckStockRequest {
  string productId = 1;
  int32 quantity = 2;
}

message CheckStockResponse {
  bool inStock = 1;
  int32 availableStock = 2;
  string message = 3;
}